Removed the bugs for the small touch devices including the gap between the touch and drawing, the bad prediction due to the relative pixel issue, and the responsiveness

--- a/number_recognition_system/static/css/styles1.css
+++ b/number_recognition_system/static/css/styles1.css
@@ -705,6 +705,12 @@ img {
 /* ------------------------------------ MEDIA QUERIES ---------------------------------------- */
 
 @media only screen and (max-width: 991px) {
+  [class*="col-"] {
+    float: left;
+    padding: 0;
+    width: 100%;
+  }
+
   img {
     max-width: 100%;
     height: auto;
@@ -764,8 +770,8 @@ img {
 
   #canvas {
     margin-left: 0px;
-    margin-top: 0px;
-    width: 100%;
+    margin-top: 10px;
+    /* border: none; */
   }
 
   #right_section {
